# restcall

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: curlify.py  restcall.py
src/restcall/: __main__.py  curlify.py  restcall.py
src/test/: test_restcall.py
src/test/fixtures/: generate-expected-result.json  get-simple-rest.json  post-simple-rest.json
test/: test_restcall.py
test/fixtures/: curl-get.txt  curl-post.txt  curlify-response.txt  get-curl-expected.json  get-simple-rest-external-file.json  multipart-payload.txt  post-curl-expected.json  post-multipart-file.json  post-simple-rest.json
